# qiqqa_tooling_devtree_snapshots

./: .gitattributes  .gitignore  DEVELOPERS-README.md  README.md  SOURCETREE-SNAPSHOT-PROCEDURE-README.md  large-files.lst
Qiqqa/MuPDF/: .CONTRIBUTORS.prelude  .editorconfig  .gitignore  CHANGES  CONTRIBUTORS.md  DEVELOPERS-README.md  Dockerfile  Makefile  Makelists  Makerules  Makethird  README.md  debugging-commandlines.txt  fetch_list.txt  fitz.py  fitz_helper_defines.py  fitz_i.py  fitz_init.py  fitz_utils.py  fitz_wrap_c.py  setup.py  utils.py
Qiqqa/MuPDF/MupdfSharp/: MuPDFSharp.csproj  Program.cs  app.config
Qiqqa/MuPDF/MupdfSharp/Properties/: AssemblyInfo.cs
Qiqqa/MuPDF/book/mupdf_explored/: README.md  (+3 more)
Qiqqa/MuPDF/docs/: bindings.adoc  coding-style.html  doxygen-custom.css  manual-mutool-run.html  style.css  template.html  thirdparty.html
Qiqqa/MuPDF/platform/cmake/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
Qiqqa/MuPDF/platform/cmake/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
Qiqqa/MuPDF/platform/cmake/source/: lib.cpp
Qiqqa/MuPDF/platform/cmake/test/: CMakeLists.txt
Qiqqa/MuPDF/platform/cmake/test/source/: qiqqa_backend_test.cpp
Qiqqa/MuPDF/scripts/: archive.sh  bin2coff.c  bin2obj.py  cbr2cbz.sh  cmapclean.py  cmapdump.py  cmapflatten.py  cmapshare.py  font_to_unicode.py  gen_libmupdf.def.py  glyphdump.py  legal_codepoints_bitmask.inc  makeencoding.py  makenoto.py  makesubset.py  mk_unicode_sanitize_table.js  mupdfwrap.py  mupdfwrap.sh  mupdfwrap_gui.cs  mupdfwrap_test.cs  mutool.py  pipcl.py  ptodoc.py  run_to_unicode_dump.sh  util.py
Qiqqa/MuPDF/tests/: pdf-xmp-xpacket-utf8-sample-1.xml  qiqqa.next-gen.library  qiqqa.next-gen.library.sql
Qiqqa/MuPDF/util/: checkout_to_known_git_branches_recursive.sh  git_add_submodule_references.sh  git_setup_all_submodules.sh  sync-all-submodules-head.sh
Qiqqa/Technology.Tests/forking cleans up memory leaks/: README.md  forking cleans up memory leaks.cpp  forking cleans up memory leaks.vcxproj  forking cleans up memory leaks.vcxproj.filters
utils/: README.md  grab_snapshot.sh  split_large_files_in_repo.sh
(+17605 files in other folders)
